--- a/index.html
+++ b/index.html
@@ -75,46 +75,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td><strong>Code 0</strong></td>
-                            <td>PANIC – Sofortige Unterstützung</td>
-                            <td>Dienstnummer XYZ – Code 0 / ALPHA (PANIC)</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Code 1</strong></td>
-                            <td>Anfahrt zum Einsatzort</td>
-                            <td>Dienstnummer XYZ – Code 1 / BRAVO (Anfahrt aktiv)</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Code 2</strong></td>
-                            <td>Einsatz aktiv</td>
-                            <td>Dienstnummer XYZ – Code 2 / CHARLIE (Einsatz bestätigt)</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Code 3</strong></td>
-                            <td>Verstärkung benötigt</td>
-                            <td>Dienstnummer XYZ – Code 3 / DELTA (Unterstützung anfordern)</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Code 4</strong></td>
-                            <td>Einsatz beendet / Lage unter Kontrolle</td>
-                            <td>Dienstnummer XYZ – Code 4 / ECHO (Lage stabil)</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Code 5</strong></td>
-                            <td>Pause / Dienstunterbrechung</td>
-                            <td>Dienstnummer XYZ – Code 5 / FOXTROT (Pause, 10 Min.)</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Code 6</strong></td>
-                            <td>Transport einer Person</td>
-                            <td>Dienstnummer XYZ – Code 6 / GOLF (Person in Gewahrsam)</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Code 7</strong></td>
-                            <td>Rückkehr zur Dienststelle</td>
-                            <td>Dienstnummer XYZ – Code 7 / HOTEL (Rückfahrt)</td>
-                        </tr>
+                        <tr><td><strong>Code 0</strong></td><td>PANIC – Sofortige Unterstützung</td><td>Dienstnummer XYZ – Code 0 / ALPHA (PANIC)</td></tr>
+                        <tr><td><strong>Code 1</strong></td><td>Anfahrt zum Einsatzort</td><td>Dienstnummer XYZ – Code 1 / BRAVO (Anfahrt aktiv)</td></tr>
+                        <tr><td><strong>Code 2</strong></td><td>Einsatz aktiv</td><td>Dienstnummer XYZ – Code 2 / CHARLIE (Einsatz bestätigt)</td></tr>
+                        <tr><td><strong>Code 3</strong></td><td>Verstärkung benötigt</td><td>Dienstnummer XYZ – Code 3 / DELTA (Unterstützung anfordern)</td></tr>
+                        <tr><td><strong>Code 4</strong></td><td>Einsatz beendet / Lage unter Kontrolle</td><td>Dienstnummer XYZ – Code 4 / ECHO (Lage stabil)</td></tr>
+                        <tr><td><strong>Code 5</strong></td><td>Pause / Dienstunterbrechung</td><td>Dienstnummer XYZ – Code 5 / FOXTROT (Pause, 10 Min.)</td></tr>
+                        <tr><td><strong>Code 6</strong></td><td>Transport einer Person</td><td>Dienstnummer XYZ – Code 6 / GOLF (Person in Gewahrsam)</td></tr>
+                        <tr><td><strong>Code 7</strong></td><td>Rückkehr zur Dienststelle</td><td>Dienstnummer XYZ – Code 7 / HOTEL (Rückfahrt)</td></tr>
                     </tbody>
                 </table>
             </div>
@@ -124,43 +92,20 @@
                 <table class="penalty-table">
                     <thead>
                         <tr>
+                            <th>Paragraph</th>
                             <th>Straftat</th>
                             <th>Strafe</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Fahren ohne Führerschein</td>
-                            <td>Haft 10 Min. + 2.000€ Geldstrafe</td>
-                        </tr>
-                        <tr>
-                            <td>Rotlichtverstoß</td>
-                            <td>500€ Geldstrafe</td>
-                        </tr>
-                        <tr>
-                            <td>Unfall / Fahrerflucht</td>
-                            <td>Haft 5 Min. + 1.500€ Geldstrafe</td>
-                        </tr>
-                        <tr>
-                            <td>Körperverletzung</td>
-                            <td>Haft 10 Min. + 1.000€ Geldstrafe</td>
-                        </tr>
-                        <tr>
-                            <td>Versuchter Mord</td>
-                            <td>Haft 25 Min. + 10.000€ Geldstrafe</td>
-                        </tr>
-                        <tr>
-                            <td>Mord</td>
-                            <td>Haft 35 Min. + 20.000€ Geldstrafe</td>
-                        </tr>
-                        <tr>
-                            <td>Widerstand gegen Beamte</td>
-                            <td>Haft 15 Min. + 5.000€ Geldstrafe</td>
-                        </tr>
-                        <tr>
-                            <td>Sachbeschädigung / Vandalismus</td>
-                            <td>Haft 3 Min. + 500€ Geldstrafe</td>
-                        </tr>
+                        <tr><td>§1</td><td>Fahren ohne Führerschein</td><td>Haft 10 Min. + 2.000€ Geldstrafe</td></tr>
+                        <tr><td>§2</td><td>Rotlichtverstoß</td><td>500€ Geldstrafe</td></tr>
+                        <tr><td>§3</td><td>Unfall / Fahrerflucht</td><td>Haft 5 Min. + 1.500€ Geldstrafe</td></tr>
+                        <tr><td>§4</td><td>Körperverletzung</td><td>Haft 10 Min. + 1.000€ Geldstrafe</td></tr>
+                        <tr><td>§5</td><td>Versuchter Mord</td><td>Haft 25 Min. + 10.000€ Geldstrafe</td></tr>
+                        <tr><td>§6</td><td>Mord</td><td>Haft 35 Min. + 20.000€ Geldstrafe</td></tr>
+                        <tr><td>§7</td><td>Widerstand gegen Beamte</td><td>Haft 15 Min. + 5.000€ Geldstrafe</td></tr>
+                        <tr><td>§8</td><td>Sachbeschädigung / Vandalismus</td><td>Haft 3 Min. + 500€ Geldstrafe</td></tr>
                     </tbody>
                 </table>
             </div>
