--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td><strong>Code 0</strong></td><td>PANIC – Sofortige Unterstützung</td><td>Dienstnummer XYZ – Code 0 / ALPHA (PANIC)</td></tr>
-                        <tr><td><strong>Code 1</strong></td><td>Anfahrt zum Einsatzort</td><td>Dienstnummer XYZ – Code 1 / BRAVO (Anfahrt aktiv)</td></tr>
-                        <tr><td><strong>Code 2</strong></td><td>Einsatz aktiv</td><td>Dienstnummer XYZ – Code 2 / CHARLIE (Einsatz bestätigt)</td></tr>
-                        <tr><td><strong>Code 3</strong></td><td>Verstärkung benötigt</td><td>Dienstnummer XYZ – Code 3 / DELTA (Unterstützung anfordern)</td></tr>
-                        <tr><td><strong>Code 4</strong></td><td>Einsatz beendet / Lage unter Kontrolle</td><td>Dienstnummer XYZ – Code 4 / ECHO (Lage stabil)</td></tr>
-                        <tr><td><strong>Code 5</strong></td><td>Pause / Dienstunterbrechung</td><td>Dienstnummer XYZ – Code 5 / FOXTROT (Pause, 10 Min.)</td></tr>
-                        <tr><td><strong>Code 6</strong></td><td>Transport einer Person</td><td>Dienstnummer XYZ – Code 6 / GOLF (Person in Gewahrsam)</td></tr>
-                        <tr><td><strong>Code 7</strong></td><td>Rückkehr zur Dienststelle</td><td>Dienstnummer XYZ – Code 7 / HOTEL (Rückfahrt)</td></tr>
+                        <tr><td><strong>Code 0</strong></td><td>PANIC – Sofortige Unterstützung</td><td>BB-[Deine Dienstnummer] Code 0</td></tr>
+                        <tr><td><strong>Code 1</strong></td><td>Anfahrt zum Einsatzort</td><td>BB-[Deine Dienstnummer] Code 1</td></tr>
+                        <tr><td><strong>Code 2</strong></td><td>Einsatz aktiv</td><td>BB-[Deine Dienstnummer] Code 2</td></tr>
+                        <tr><td><strong>Code 3</strong></td><td>Verstärkung benötigt</td><td>BB-[Deine Dienstnummer] Code 3</td></tr>
+                        <tr><td><strong>Code 4</strong></td><td>Einsatz beendet / Lage unter Kontrolle</td><td>BB-[Deine Dienstnummer] Code 4</td></tr>
+                        <tr><td><strong>Code 5</strong></td><td>Pause / Dienstunterbrechung</td><td>BB-[Deine Dienstnummer] Code 5</td></tr>
+                        <tr><td><strong>Code 6</strong></td><td>Transport einer Person</td><td>BB-[Deine Dienstnummer] Code 6</td></tr>
+                        <tr><td><strong>Code 7</strong></td><td>Rückkehr zur Dienststelle</td><td>BB-[Deine Dienstnummer] Code 7</td></tr>
                     </tbody>
                 </table>
             </div>
